# oinakos

./: .gitignore  GEMINI.md  LICENSE  Makefile  README.md  go.mod  go.sum  main.go  pyproject.toml  wasm.Dockerfile
.github/workflows/: release.yml
assets/audio/: README.md
assets/wasm/: index.html
cmd/server/: main.go
data/campaigns/: classic.yaml  (+4 more)
plans/: 8dir_animation.md  advanced_ai_pathfinding.md  ai_npc_intelligence.md  animation_juice.md  biome_diversity.md  combat_rules.md  damageable_obstacles.md  dark_controversial_content.md  dark_knight.md  day_night_cycle.md  death_alternatives.md  debatable_content.md  dialogue_system.md  dynamic_audio_polish.md  female_npcs.md  fix_obstacles.md  floor_system.md  fog_of_war.md  healer_npc.md  healing_well.md  lime_background_standardization.md  llm_npc_integration.md  map_improvements.md  markov_chain_dialogues.md  minimal_ai.md  multi_tile_floors.md  permanent_damage.md  ranged_enemies.md  savestate_system.md  sprite_animations.md  stamina_and_vitality.md  startup_optimization.md  ui_overhaul.md  unique_npcs.md  vampire_mechanics.md  weather_system.md
scripts/: Dockerfile.linux  bundle_linux.sh  bundle_mac.sh  bundle_windows.sh  generate_all_audio.py  generate_audio_v2.sh  piper_gen.py
tools/: asset_pipeline.py  convert_white_to_lime.py  extract_perimeter.py  find_white_bg.py  floodfill_corners.py  generate_assets.py  harmonize_scales.py  lime_assets.py  lime_tree2.py  process_assets.py  scale_character.py  scale_characters.py  scale_images.py  scale_nature.py  scale_specific_characters.py  transparent_icon.py
(+323 files in other folders)
