[project]
name = "oinakos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pathvalidate>=3.3.1",
    "pillow>=12.1.1",
    "piper-tts>=1.4.1",
    "pyyaml>=6.0.3",
]

[tool.uv.workspace]
members = [
    "tools/generate_assets.py",
    "tools/asset_processor",
]
